Support defining LIB_SUFFIX for proper multilib libdir
Support appending ABI-specific suffix to libdir as needed for install on
multilib systems. This is done via LIB_SUFFIX variable that is used
in some other CMake projects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ set(MINOR_VERSION 4)
 set(PATCH_VERSION 2)
 set(SO_VERSION    0)
 
+set(LIB_SUFFIX "" CACHE STRING "Suffix for library directory (32/64)")
+
 # defaults for modules that can be enabled/disabled
 set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
 set(HTTP_CLIENT YES CACHE BOOL "Include HTTP client support using curl")
