--- a/src/stubgenerator/CMakeLists.txt
+++ b/src/stubgenerator/CMakeLists.txt
@@ -29,8 +29,8 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
-install(TARGETS jsonrpcstub LIBRARY DESTINATION lib
-	ARCHIVE DESTINATION lib
+install(TARGETS jsonrpcstub LIBRARY DESTINATION lib${LIB_SUFFIX}
+	ARCHIVE DESTINATION lib${LIB_SUFFIX}
 	RUNTIME DESTINATION bin
 )
 
