Process examples/CMakeLists.txt indep of COMPILE_EXAMPLES
Include examples/CMakeLists.txt independently of COMPILE_EXAMPLES
conditional, use it to restrict building programs inside that file. This
makes sure that the stub building rules are available for tests even
when building examples is disabled.

Fixes: https://github.com/cinemast/libjson-rpc-cpp/issues/101

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ if (COMPILE_STUBGEN)
 endif ()
 
 # setup examples
-if (COMPILE_EXAMPLES AND HTTP_SERVER AND HTTP_CLIENT)
+if (HTTP_SERVER AND HTTP_CLIENT)
 	add_subdirectory(src/examples)
 endif()
 
