Use correct paths for stub dependencies
Use correct ${CMAKE_BINARY_DIR}/gen paths for dependencies on generated
stubs. This ensures that CMake correctly regenerates them only if
jsonrpcstub or the spec file changes.

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -1,8 +1,7 @@
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/gen)
 
-# TODO optimize these scripts, so we will not have to recompile examples every time
 add_custom_command(
-	OUTPUT abstractstubserver.h
+	OUTPUT ${CMAKE_BINARY_DIR}/gen/abstractstubserver.h
 	COMMAND jsonrpcstub ARGS ${CMAKE_CURRENT_SOURCE_DIR}/spec.json --cpp-server=AbstractStubServer --cpp-server-file=${CMAKE_BINARY_DIR}/gen/abstractstubserver.h
 	MAIN_DEPENDENCY spec.json
 	DEPENDS jsonrpcstub
@@ -11,7 +10,7 @@ add_custom_command(
 )
 
 add_custom_command(
-	OUTPUT stubclient.h
+	OUTPUT ${CMAKE_BINARY_DIR}/gen/stubclient.h
 	COMMAND jsonrpcstub ARGS ${CMAKE_CURRENT_SOURCE_DIR}/spec.json --cpp-client=StubClient --cpp-client-file=${CMAKE_BINARY_DIR}/gen/stubclient.h
 	MAIN_DEPENDENCY spec.json
 	DEPENDS jsonrpcstub
@@ -20,11 +19,11 @@ add_custom_command(
 )
 
 add_custom_target(common_stubs
-	DEPENDS abstractstubserver.h stubclient.h
+	DEPENDS ${CMAKE_BINARY_DIR}/gen/abstractstubserver.h ${CMAKE_BINARY_DIR}/gen/stubclient.h
 )
 
 add_custom_command(
-	OUTPUT xbmcremote.h
+	OUTPUT ${CMAKE_BINARY_DIR}/gen/xbmcremote.h
 	COMMAND jsonrpcstub ARGS ${CMAKE_CURRENT_SOURCE_DIR}/xbmc_remote.json --cpp-client=XbmcRemoteClient --cpp-client-file=${CMAKE_BINARY_DIR}/gen/xbmcremote.h
 	MAIN_DEPENDENCY xbmc_remote.json
 	DEPENDS jsonrpcstub
@@ -45,13 +44,13 @@ if (COMPILE_EXAMPLES)
 	target_link_libraries(simpleclientsample jsonrpcclient)
 
 	if (COMPILE_STUBGEN)
-		add_executable(stubclientsample stubclient.cpp stubclient.h)
+		add_executable(stubclientsample stubclient.cpp ${CMAKE_BINARY_DIR}/gen/stubclient.h)
 		target_link_libraries(stubclientsample jsonrpcclient)
 
-		add_executable(stubserversample stubserver.cpp abstractstubserver.h)
+		add_executable(stubserversample stubserver.cpp ${CMAKE_BINARY_DIR}/gen/abstractstubserver.h)
 		target_link_libraries(stubserversample jsonrpcserver)
 
-		add_executable(xbmcremote xbmcremote.cpp xbmcremote.h)
+		add_executable(xbmcremote xbmcremote.cpp ${CMAKE_BINARY_DIR}/gen/xbmcremote.h)
 		target_link_libraries(xbmcremote jsonrpcclient)
 	endif()
 endif()
