--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,8 +60,7 @@ before_build:
     - cmake -E copy_directory jsoncpp install
 
     # argtable not supported
-
-    - ls
+   
     - echo "Running cmake..."
     - cd c:\projects\libjson-rpc-cpp
     - cmake -DCMAKE_PREFIX_PATH="c:/projects/libjson-rpc-cpp/deps/install" -DCOMPILE_STUBGEN=NO .
@@ -70,6 +69,12 @@ build:
     project: ALL_BUILD.vcxproj      # path to Visual Studio solution or project
 
 after_build:
+      # copy missing dlls
+    - cd c:\projects\libjson-rpc-cpp\bin\Debug
+    - cmake -E copy c:\projects\libjson-rpc-cpp\deps\install\bin\libmicrohttpd-dll_d.dll .
+
+      # run tests
     - echo "Running tests..."
+    - unit_testsuite.exe
     - echo "Finished!"
 
