--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,13 @@ set(MINOR_VERSION 5)
 set(PATCH_VERSION 0)
 set(SO_VERSION    0)
 
-set(BUILD_STATIC_LIBS NO CACHE BOOL "Build static libraries in addition to shared")
+set(BUILD_SHARED_LIBS YES CACHE BOOL "Build shared libraries")
+set(BUILD_STATIC_LIBS NO CACHE BOOL "Build static libraries")
 set(LIB_SUFFIX "" CACHE STRING "Suffix for library directory (32/64)")
+
+if (NOT BUILD_SHARED_LIBS AND NOT BUILD_STATIC_LIBS)
+	message(FATAL_ERROR "Both BUILD_SHARED_LIBS and BUILD_STATIC_LIBS are disabled")
+endif()
 
 # defaults for modules that can be enabled/disabled
 set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
