Added option for Unix Domain Socket Server compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(BUILD_STATIC_LIBS NO CACHE BOOL "Build static libraries in addition to share
 set(LIB_SUFFIX "" CACHE STRING "Suffix for library directory (32/64)")
 
 # defaults for modules that can be enabled/disabled
+set(UNIX_DOMAIN_SOCKET_SERVER YES CACHE BOOL "Include Unix Domain Socket server")
 set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
 set(HTTP_CLIENT YES CACHE BOOL "Include HTTP client support using curl")
 set(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
