Added CMake specific content to build unix domain socket client. Also restricted those build option to UNIXes only.

--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -52,6 +52,11 @@ if (UNIX_DOMAIN_SOCKET_SERVER)
 	list(APPEND server_connector_libs ${CMAKE_THREAD_LIBS_INIT})
 endif()
 
+if (UNIX_DOMAIN_SOCKET_CLIENT)
+	list(APPEND client_connector_header "client/connectors/unixdomainsocketclient.h")
+	list(APPEND client_connector_source "client/connectors/unixdomainsocketclient.cpp")
+endif()
+
 # configure a header file to pass some of the CMake settings to the source code
 # TODO: move it to custom build step?
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/gen/jsonrpccpp/common")
