added debian multiarch support

--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -127,8 +127,8 @@ if (WIN32)
 endif()
 
 install(TARGETS ${ALL_LIBS}
-	LIBRARY DESTINATION lib${LIB_SUFFIX}
-	ARCHIVE DESTINATION lib${LIB_SUFFIX}
+        LIBRARY DESTINATION lib/${CMAKE_LIBRARY_PATH}
+        ARCHIVE DESTINATION lib/${CMAKE_LIBRARY_PATH}
 	RUNTIME DESTINATION bin
 )
 
