--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,10 @@ set(COMPILE_EXAMPLES YES CACHE BOOL "Compile example programs")
 # print actual settings
 message(STATUS "HTTP_SERVER: ${HTTP_SERVER}")
 message(STATUS "HTTP_CLIENT: ${HTTP_CLIENT}")
+if(UNIX)
+    message(STATUS "UNIXDOMAINSOCKET_SERVER: ${UNIX_DOMAIN_SOCKET_SERVER}")
+    message(STATUS "UNIXDOMAINSOCKET_CLIENT: ${UNIX_DOMAIN_SOCKET_CLIENT}")
+endif(UNIX)
 message(STATUS "COMPILE_TESTS: ${COMPILE_TESTS}")
 message(STATUS "COMPILE_STUBGEN: ${COMPILE_STUBGEN}")
 message(STATUS "COMPILE_EXAMPLES: ${COMPILE_EXAMPLES}")
@@ -75,8 +79,8 @@ if (HTTP_SERVER AND HTTP_CLIENT)
 endif()
 
 # setup test suite
-if (Boost_FOUND AND COMPILE_TESTS)
-	enable_testing()
+if (COMPILE_TESTS)
+        enable_testing(true)
 	add_subdirectory(src/test)
 endif()
 
@@ -101,21 +105,4 @@ add_custom_target(
 )
 
 # packaging stuff
-include(InstallRequiredSystemLibraries)
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "libjson-rpc-cpp")
-set(CPACK_PACKAGE_VENDOR "Peter Spiess-Knafl <psk@autistici.org>")
-set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
-set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
-set(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
-set(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
-set(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
-
-if (WIN32 AND NOT UNIX)
-	set(CPACK_GENERATOR "NSIS")
-	set(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY} libjson-rpc-cpp")
-	set(CPACK_NSIS_HELP_LINK "http://github.com/cinemast/libjson-rpc-cpp")
-	set(CPACK_NSIS_URL_INFO_ABOUT "http://github.com/cinemast/libjson-rpc-cpp")
-	set(CPACK_NSIS_CONTACT "psk@autistici.org")
-	set(CPACK_NSIS_MODIFY_PATH ON)
-endif(WIN32 AND NOT UNIX)
-include(CPack)
+include(CMakePackaging)
