added integration test for unixdomain socket

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -14,40 +14,34 @@ include_directories(${CMAKE_BINARY_DIR})
 include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${JSONCPP_INCLUDE_DIRS})
 
-if (HTTP_CLIENT AND HTTP_SERVER)
+if(HTTP_CLIENT AND HTTP_SERVER)
         add_definitions(-DHTTP_TESTING)
 else()
         list(REMOVE_ITEM test_source "${CMAKE_CURRENT_SOURCE_DIR}/testhttpserver.cpp")
 endif()
 
-if (UNIX_DOMAIN_SOCKET_SERVER AND UNIX_DOMAIN_SOCKET_CLIENT)
+if(UNIX_DOMAIN_SOCKET_SERVER AND UNIX_DOMAIN_SOCKET_CLIENT)
     add_definitions(-DUNIXDOMAINSOCKET_TESTING)
 endif()
 
-if (COMPILE_STUBGEN)
+if(COMPILE_STUBGEN)
 	add_definitions(-DSTUBGEN_TESTING)
 endif()
 
-if (HTTP_CLIENT AND HTTP_SERVER AND COMPILE_STUBGEN)
+if(COMPILE_STUBGEN)
 	add_definitions(-DINTEGRATION_TESTING)
 endif()
 
-# TODO: not sure if this is necessary
-if (WIN32)
-	link_directories(${Boost_LIBRARY_DIRS})
-endif ()
-
 add_executable(unit_testsuite ${test_source})
-target_link_libraries(unit_testsuite ${Boost_UNIT_TEST_FRAMEWORK_LIBRARIES})
 target_link_libraries(unit_testsuite jsonrpccommon)
 target_link_libraries(unit_testsuite jsonrpcserver)
 target_link_libraries(unit_testsuite jsonrpcclient)
 
-if (COMPILE_STUBGEN)
+if(COMPILE_STUBGEN)
 	target_link_libraries(unit_testsuite stubgen)
 endif()
 
-if (HTTP_CLIENT AND HTTP_SERVER AND COMPILE_STUBGEN)
+if(HTTP_CLIENT AND HTTP_SERVER AND COMPILE_STUBGEN)
 	add_dependencies(unit_testsuite common_stubs)
 endif()
 
@@ -55,15 +49,19 @@ add_test(client ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[client]")
 add_test(server ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[server]")
 add_test(NAME common WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[common]")
 
-if (HTTP_CLIENT AND HTTP_SERVER)
+if(HTTP_CLIENT AND HTTP_SERVER)
         add_test(NAME connector_http WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[connector_http]")
 endif()
 
-if (COMPILE_STUBGEN)
+if (UNIX_DOMAIN_SOCKET_CLIENT AND UNIX_DOMAIN_SOCKET_SERVER)
+        add_test(NAME connector_unixdomainsocket WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[connector_unixdomainsocket]")
+endif()
+
+if(COMPILE_STUBGEN)
         add_test(NAME stubgen WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[stubgenerator]")
 endif()
 
-if (HTTP_CLIENT AND HTTP_SERVER AND COMPILE_STUBGEN)
+if(HTTP_CLIENT AND HTTP_SERVER AND COMPILE_STUBGEN)
         add_test(NAME integration WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/unit_testsuite "[integration]")
 endif()
 
