--- a/src/stubgenerator/CMakeLists.txt
+++ b/src/stubgenerator/CMakeLists.txt
@@ -11,7 +11,7 @@ set(ALL_LIBS)
 
 if (BUILD_SHARED_LIBS)
         add_library(libjsonrpcstub SHARED ${jsonrpcstub_source} ${jsonrpcstub_header} ${jsonrpc_helper_source_common})
-        target_link_libraries(libjsonrpcstub jsonrpccpp-common ${JSONCPP_LIBRARIES} ${ARGTABLE_LIBRARIES})
+        target_link_libraries(libjsonrpcstub jsonrpccommon ${JSONCPP_LIBRARIES} ${ARGTABLE_LIBRARIES})
         set_target_properties(libjsonrpcstub PROPERTIES OUTPUT_NAME jsonrpccpp-stub)
         list(APPEND ALL_LIBS libjsonrpcstub)
 endif()
@@ -19,7 +19,7 @@ endif()
 # setup static common library
 if (BUILD_STATIC_LIBS)
         add_library(libjsonrpcstubStatic STATIC ${jsonrpcstub_source} ${jsonrpcstub_header} ${jsonrpc_helper_source_common})
-        target_link_libraries(libjsonrpcstubStatic jsonrpccpp-common ${JSONCPP_LIBRARIES} ${ARGTABLE_LIBRARIES})
+        target_link_libraries(libjsonrpcstubStatic jsonrpccommonStatic ${JSONCPP_LIBRARIES} ${ARGTABLE_LIBRARIES})
         set_target_properties(libjsonrpcstubStatic PROPERTIES OUTPUT_NAME jsonrpccpp-stub)
 
         if (NOT BUILD_SHARED_LIBS)
