initial implementation of ZMQServerConnector + CMake handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ if(UNIX)
 endif(UNIX)
 set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
 set(HTTP_CLIENT YES CACHE BOOL "Include HTTP client support using curl")
+set(ZMQ_SERVER YES CACHE BOOL "Include ZeroMQ server support")
+set(ZMQ_CLIENT YES CACHE BOOL "Include ZeroMQ client support")
 set(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
 set(COMPILE_STUBGEN YES CACHE BOOL "Compile the stubgenerator")
 set(COMPILE_EXAMPLES YES CACHE BOOL "Compile example programs")
