Modified CMake files to build Tcp Sockets connectors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ if(UNIX)
 	set(UNIX_DOMAIN_SOCKET_SERVER YES CACHE BOOL "Include Unix Domain Socket server")
 	set(UNIX_DOMAIN_SOCKET_CLIENT YES CACHE BOOL "Include Unix Domain Socket client")
 endif(UNIX)
+	set(TCP_SOCKET_SERVER YES CACHE BOOL "Include Tcp Socket server")
+	set(TCP_SOCKET_CLIENT YES CACHE BOOL "Include Tcp Socket client")
 set(HTTP_SERVER YES CACHE BOOL "Include HTTP server using libmicrohttpd")
 set(HTTP_CLIENT YES CACHE BOOL "Include HTTP client support using curl")
 set(COMPILE_TESTS YES CACHE BOOL "Compile test framework")
@@ -39,6 +41,8 @@ if(UNIX)
 	message(STATUS "UNIX_DOMAIN_SOCKET_SERVER: ${UNIX_DOMAIN_SOCKET_SERVER}")
 	message(STATUS "UNIX_DOMAIN_SOCKET_CLIENT: ${UNIX_DOMAIN_SOCKET_CLIENT}")
 endif(UNIX)
+message(STATUS "TCP_SOCKET_SERVER: ${TCP_SOCKET_SERVER}")
+message(STATUS "TCP_SOCKET_CLIENT: ${TCP_SOCKET_CLIENT}")
 message(STATUS "HTTP_SERVER: ${HTTP_SERVER}")
 message(STATUS "HTTP_CLIENT: ${HTTP_CLIENT}")
 message(STATUS "COMPILE_TESTS: ${COMPILE_TESTS}")
