--- a/src/jsonrpccpp/CMakeLists.txt
+++ b/src/jsonrpccpp/CMakeLists.txt
@@ -57,6 +57,39 @@ if (UNIX_DOMAIN_SOCKET_CLIENT)
 	list(APPEND client_connector_source "client/connectors/unixdomainsocketclient.cpp")
 endif()
 
+# setup sources for tcp socket connectors
+if (TCP_SOCKET_SERVER)
+	list(APPEND server_connector_header "server/connectors/tcpsocketserver.h")
+	list(APPEND server_connector_source "server/connectors/tcpsocketserver.cpp")
+	list(APPEND server_connector_header "server/connectors/tcpsocketserverprivate.h")
+	if (WIN32)
+		list(APPEND server_connector_header "server/connectors/windowstcpsocketserver.h")
+		list(APPEND server_connector_source "server/connectors/windowstcpsocketserver.cpp")
+	endif()
+	if(UNIX)
+		list(APPEND server_connector_header "server/connectors/linuxtcpsocketserver.h")
+		list(APPEND server_connector_source "server/connectors/linuxtcpsocketserver.cpp")
+	endif()
+	list(APPEND server_connector_libs ${CMAKE_THREAD_LIBS_INIT})
+	list(APPEND server_connector_libs ${CMAKE_THREAD_LIBS_INIT})
+endif()
+
+if (TCP_SOCKET_CLIENT)
+	list(APPEND client_connector_header "client/connectors/tcpsocketclient.h")
+	list(APPEND client_connector_source "client/connectors/tcpsocketclient.cpp")
+	list(APPEND client_connector_header "client/connectors/tcpsocketclientprivate.h")
+	if (WIN32)
+		list(APPEND client_connector_header "client/connectors/windowstcpsocketclient.h")
+		list(APPEND client_connector_source "client/connectors/windowstcpsocketclient.cpp")
+	endif()
+	if(UNIX)
+		list(APPEND client_connector_header "client/connectors/linuxtcpsocketclient.h")
+		list(APPEND client_connector_source "client/connectors/linuxtcpsocketclient.cpp")
+	endif()
+	list(APPEND client_connector_libs ${CMAKE_THREAD_LIBS_INIT})
+	list(APPEND client_connector_libs ${CMAKE_THREAD_LIBS_INIT})
+endif()
+
 # configure a header file to pass some of the CMake settings to the source code
 # TODO: move it to custom build step?
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/gen/jsonrpccpp/common")
