Added tcp simple server and client examples compilation to CMake files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ if (COMPILE_STUBGEN)
 endif ()
 
 # setup examples
-if ((HTTP_SERVER AND HTTP_CLIENT) OR (UNIX AND UNIX_DOMAIN_SOCKET_SERVER AND UNIX_DOMAIN_SOCKET_CLIENT))
+if ((HTTP_SERVER AND HTTP_CLIENT) OR (UNIX AND UNIX_DOMAIN_SOCKET_SERVER AND UNIX_DOMAIN_SOCKET_CLIENT) OR (TCP_SOCKET_SERVER AND TCP_SOCKET_CLIENT))
 	add_subdirectory(src/examples)
 endif()
 
