trying to fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ before_install:
  - sudo make install && sudo ldconfig
  - cd .. && sudo rm -rf libmicrohttpd-0.9.38
  - sudo pip install cpp-coveralls
+ -  sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+ -  sudo apt-get update -qq
+ -  if [ "$CXX" = "g++" ]; then sudo apt-get install -qq g++-4.8; fi
+ -  if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
 
 env:
  - HTTP_SERVER=YES HTTP_CLIENT=YES COMPILE_STUBGEN=YES
